k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.app.yml -o ./k8s/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.app.yml -o ./k8s/
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/boardgames-shop-app-network: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: dev-remote-AKS
            - name: WAIT_HOSTS
              value: db:3306
          image: rivnegraycontainers.azurecr.io/app:latest
          name: app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
